# dde_network_solver

./: .gitignore  CMakeLists.txt  README.md  build.sh  main  todo.cpp
include/: constants.hpp  dynamicsystems.hpp  logger.hpp  network.hpp  parse_functions.hpp  parser.hpp  timeseries.hpp
src/: dynamicsystems.cpp  logger.cpp  main.cpp  network.cpp  parse_functions.cpp  parser.cpp  timeseries.cpp
test_snippets/: armadillo_mmptr.cpp  polymorphic_test.cpp
test_snippets/dynamicalsystems_zeuchs/: Makefile  README.md  main.cpp  parse_with_map.cpp  plot.py
test_snippets/dynamicalsystems_zeuchs/oscillator_models/: dynamicalsystem.cpp  oscillator_langkobayashi.cpp  oscillator_lorenz.cpp  oscillator_mackeyglass.cpp  oscillator_roessler.cpp  oscillator_stuartlandau.cpp
